--- a/home_page/index.html
+++ b/home_page/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REVA University grade calcualtor</title>
-    <link rel="shortcut icon" href="0.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/0.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 
 
@@ -21,7 +21,7 @@
 
         <!-- reva logo \\\\ -->
         <div id="revalogo">
-            <img id="mainlogo" src="reva_img.png" alt="" srcset="">
+            <img id="mainlogo" src="../images/reva_img.png" alt="" srcset="">
         </div>
 
         <!--\\\\\\\\\\\\\\\\ main content \\\\\\\\\\ -->
@@ -29,6 +29,10 @@
         <DIV>
             <h1>Grade Calculator</h1>
         </DIV>
+
+        <div id="input">
+            <input type="number" placeholder="First Internal Marks" name="firstintrrnal" id="internalfirst">
+        </div>
 
     </div>
 
