--- a/home_page/index.html
+++ b/home_page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REVA University grade calcualtor</title>
+    <title>REVA University Grade Calculator</title>
     <link rel="shortcut icon" href="../images/0.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 
