--- a/home_page/index.html
+++ b/home_page/index.html
@@ -26,12 +26,26 @@
 
         <!--\\\\\\\\\\\\\\\\ main content \\\\\\\\\\ -->
 
-        <DIV>
+        <DIV  id="title">
             <h1>Grade Calculator</h1>
         </DIV>
 
         <div id="input">
-            <input type="number" placeholder="First Internal Marks" name="firstintrrnal" id="internalfirst">
+            <section>
+                <ul>
+                    <li>
+                        <span>First Internal :</span>
+                        <input type="number" placeholder="First Internal Marks" name="firstintrrnal" id="internalfirst">
+                    </li>
+                    <li>
+                        <span>Second Internal :</span>
+                        <input type="number" name="sec" id="">
+                    </li>
+                </ul>
+            </section>
+            
+            
+
         </div>
 
     </div>
