--- a/revagradecalculator/index.html
+++ b/revagradecalculator/index.html
@@ -13,9 +13,17 @@
     <!-- Css -->
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="appmedia.css">
     <!-- Favicon -->
     <link rel="icon" href="images/Favicon.png" />
     <title>Reva Grade Calculator</title>
+
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <!-- Fonts end -->
   </head>
   <body>
     <!-- Navbar -->
@@ -53,7 +61,7 @@
     <!-- Subjects -->
     <div id="subjectnumbersection" class="subjects">
       <form class="number-form">
-        <label id="numbersublabel" for="numbersub">Subjects</label>
+        <label id="numbersublabel" for="numbersub">Subjects :</label>
         <input id="numbersub" placeholder="Number of Subjects" type="number" />
         <button type="submit">Process</button>
       </form>
