about page created

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="items-nav">
         <ul id="items-holder">
           <li class="item"><a href="#">Home</a></li>
-          <li class="item"><a href="#">About</a></li>
+          <li class="item"><a href="revagradecalculator/about.html">About</a></li>
         </ul>
       </div>
     </nav>
