--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="items-nav">
         <ul id="items-holder">
-          <li class="item"><a href="#">Home</a></li>
+          <li class="item"><a href="index.html">Home</a></li>
           <li class="item"><a href="revagradecalculator/about.html">About</a></li>
         </ul>
       </div>
