--- a/revagradecalculator/about.html
+++ b/revagradecalculator/about.html
@@ -44,13 +44,13 @@
         <div id="enock" class="imgdiv">
             <img src="../images/WhatsApp Image 2022-09-22 at 11.09.19 AM.jpeg" alt="Enock" id="enockimg" srcset="">
             <h1 class="h1n">B Jamin  Enock</h1>
-            <a href="https://www.linkedin.com/in/jamin-enock-6922391b3/"><img class="linkedinimg" src="../images/Linkedin-Logo-removebg-preview.png" alt="" srcset=""></a>
+            <a href="https://www.linkedin.com/in/jamin-enock-6922391b3/" target="_blank"><img class="linkedinimg" src="../images/Linkedin-Logo-removebg-preview.png" alt="" srcset=""></a>
         </div>
 
         <div id="deon" class="imgdiv">
             <img src="../images/WhatsApp Image 2022-09-21 at 10.45.48 PM.jpeg" alt="deon"  srcset="" id="deonimg">
             <h1 class="h1n">Deon Levon Dmello</h1>
-            <a href=""><img src="../images/Linkedin-Logo-removebg-preview.png" class="linkedinimg" alt="" srcset=""></a>
+            <a href="https://www.linkedin.com/in/deon-dmello-60b152212/" target="_blank"><img src="../images/Linkedin-Logo-removebg-preview.png" class="linkedinimg" alt="" srcset=""></a>
         </div>
       </div>
     
